[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "corvid-remember"
version = "0.3.0"
description = "Permanent memory layer for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "juraxis" }]
keywords = ["ai", "memory", "coding-agent", "claude", "codex", "semantic-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastembed>=0.4.0",
    "sqlite-vec>=0.1.0",
]

[project.optional-dependencies]
lite = []  # pip install corvid-remember[lite] for keyword-only, no heavy deps

[project.scripts]
corvid = "corvid:main"

[project.urls]
Homepage = "https://github.com/juraxis/corvid"
Repository = "https://github.com/juraxis/corvid"

[tool.setuptools]
py-modules = ["corvid"]

[tool.setuptools.package-data]
"*" = ["skills/**/*.md"]
